# django-views-perf-monitor

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
tests/: test_django_integration.py  test_redis_backend.py
views_perf_monitor/: admin.py  apps.py  filters.py  middleware.py  models.py  stats.py  views.py
views_perf_monitor/backends/: __init__.py  dummy.py  factory.py  redis.py
views_perf_monitor/static/views_perf_monitor/: common.js  controls.js  dashboard.js  monitor.css
views_perf_monitor/static/views_perf_monitor/charts/: dashboard-tags.js  route-tag.js  routes.js  status.js  tags.js  trend.js
views_perf_monitor/templates/views_perf_monitor/: _aggregation_info.html  _data_range_info.html  dashboard.html  pagination.html  route_breakdown.html  route_tag_breakdown.html  routes_stats.html  tag_breakdown.html  tags_stats.html
