[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "django-views-perf-monitor"
version = "0.2.5"
description = "Django views performance admin dashboard"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "django>=3.2",
]

[dependency-groups]
dev = [
  "djlint>=1.36.4",
  "fakeredis[lua]>=2.34",
  "pytest>=9.0.2",
  "redis>=7.1.1",
  "ruff>=0.15.1",
  "tox>=4.46.3",
  "tox-uv>=1.33.0",
]

[tool.hatch]
build.targets.wheel.packages = [ "views_perf_monitor" ]

[tool.djlint]
profile = "django"
indent = 2
max_line_length = 120
blank_line_after_tag = "load,extends,include"
blank_line_before_tag = "block,endblock"
format_css = true
format_js = true

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = [
  "*.pyc",
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "migrations",
  "venv",
  "generate_test_data_streaming.py",
]
format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
lint.select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "DJ",  # flake8-django
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "RUF", # Ruff-specific rules
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
lint.ignore = [
  "E501", # line too long (handled by formatter)
]
lint.per-file-ignores."__init__.py" = [ "F401" ]  # unused imports in __init__.py
lint.per-file-ignores."tests/**/*.py" = [
  "DJ008", # Model does not define __str__ method
  "F821",  # Undefined name
  "N806",  # Variable in function should be lowercase
]
lint.isort.section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
